--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,9 +2,9 @@
   <header class="header">  
     <nav>
       <div class="logo">SKEELS PORTAL</div>  
-      <a href="#">Home</a>  
-      <a href="#">Post a Job</a>  
-      <a href="#">Get Started</a>  
+      <a routerLink="/">Home</a>  
+      <a routerLink="/hjkf">Post a Job</a>  
+      <a routerLink="/nnvdj">Get Started</a>  
     </nav>  
   </header>  
 
